Set UTF-8 environment variable
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/zetasql.yaml
+++ b/zetasql.yaml
@@ -31,6 +31,7 @@ environment:
     BAZEL_ARGS: "--config=g++"
     EXTRA_BAZEL_ARGS: "--tool_java_runtime_version=local_jdk"
     JAVA_HOME: /usr/lib/jvm/java-17-openjdk
+    LANG: en_US.UTF-8
 
 pipeline:
   - uses: git-checkout
