Fixed build failure with UTF-8 filenames, see wolfi-dev/os#26865

--- a/zetasql.yaml
+++ b/zetasql.yaml
@@ -27,11 +27,12 @@ environment:
       - python3
       - tzdata
       - wolfi-baselayout
+      - glibc-locale-en # This fixes the build failure with UTF-8 filenames, see wolfi-dev/os#26865
   environment:
     BAZEL_ARGS: "--config=g++"
     EXTRA_BAZEL_ARGS: "--tool_java_runtime_version=local_jdk"
     JAVA_HOME: /usr/lib/jvm/java-17-openjdk
-    LANG: en_US.UTF-8
+    LANG: en_US.UTF-8 # Added as a potential fix for UTF-8 filenames, doesn't seem to have any effect
 
 pipeline:
   - uses: git-checkout
