exim: introduce subpackages for lookups

--- a/exim.yaml
+++ b/exim.yaml
@@ -9,6 +9,13 @@ package:
     disabled:
       - setuidgid
 
+data:
+  - name: exim-lookups-with-deps
+    items:
+      mysql: "mariadb-connector-c"
+      sqlite: "sqlite-libs"
+      pgsql: "libpq"
+
 environment:
   contents:
     packages:
@@ -35,7 +42,7 @@ environment:
   accounts:
     users:
       - username: exim
-        uid: 1001
+        uid: 65332
 
 pipeline:
   - uses: fetch
@@ -74,9 +81,57 @@ pipeline:
   - uses: strip
 
 subpackages:
+  - range: exim-lookups-with-deps
+    name: exim-${{range.key}}
+    description: "EXIM extension: ${{range.key}}"
+    pipeline:
+      - runs: |
+          install -D -m 755 ./build-Linux-${{build.arch}}/lookups/${{range.key}}.so ${{targets.subpkgdir}}/usr/lib/${{package.name}}/${{range.key}}.so
+      - uses: strip
+    dependencies:
+      runtime:
+        - exim=${{package.full-version}}
+        - ${{range.value}}
+
+  - name: exim-dnsdb
+    description: "EXIM extension: dnsdb"
+    pipeline:
+      - runs: |
+          install -D -m 755 ./build-Linux-${{build.arch}}/lookups/dnsdb.so ${{targets.subpkgdir}}/usr/lib/${{package.name}}/dnsdb.so
+      - uses: strip
+    dependencies:
+      runtime:
+        - exim=${{package.full-version}}
+
+  - name: exim-dbmdb
+    description: "EXIM extension: dbmdb"
+    pipeline:
+      - runs: |
+          install -D -m 755 ./build-Linux-${{build.arch}}/lookups/dbmdb.so ${{targets.subpkgdir}}/usr/lib/${{package.name}}/dbmdb.so
+      - uses: strip
+    dependencies:
+      runtime:
+        - exim=${{package.full-version}}
+
+  - name: exim-cdb
+    description: "EXIM extension: cdb"
+    pipeline:
+      - runs: |
+          install -D -m 755 ./build-Linux-${{build.arch}}/lookups/cdb.so ${{targets.subpkgdir}}/usr/lib/${{package.name}}/cdb.so
+      - uses: strip
+    dependencies:
+      runtime:
+        - exim=${{package.full-version}}
 
 test:
   environment:
+    accounts:
+      users:
+        - username: exim
+          uid: 65332
+      groups:
+        - groupname: exim
+          gid: 65332
     contents:
       packages:
         - shadow
@@ -85,7 +140,6 @@ test:
   pipeline:
     - name: "Test exim is installed and working"
       runs: |
-        useradd exim
         if ! command -v exim &> /dev/null; then
           echo "Exim is not installed."
           exit 1
