--- a/gcc-13.yaml
+++ b/gcc-13.yaml
@@ -1,7 +1,7 @@
 package:
   name: gcc-13
   version: 13.3.0
-  epoch: 4
+  epoch: 5
   description: "the GNU compiler collection - version 13"
   copyright:
     - license: GPL-3.0-or-later WITH GCC-exception-3.1
@@ -28,6 +28,7 @@ environment:
       - make
       - mpc-dev
       - mpfr-dev
+      - openssf-compiler-options
       - patch
       - texinfo
       - wolfi-baselayout
@@ -207,18 +208,6 @@ subpackages:
             gcov-tool --help
             lto-dump --version
             lto-dump --help
-            x86_64-pc-linux-gnu-c++ --version
-            x86_64-pc-linux-gnu-c++ --help
-            x86_64-pc-linux-gnu-g++ --version
-            x86_64-pc-linux-gnu-g++ --help
-            x86_64-pc-linux-gnu-gcc --version
-            x86_64-pc-linux-gnu-gcc --help
-            x86_64-pc-linux-gnu-gcc-ar --version
-            x86_64-pc-linux-gnu-gcc-ar --help
-            x86_64-pc-linux-gnu-gcc-nm --version
-            x86_64-pc-linux-gnu-gcc-nm --help
-            x86_64-pc-linux-gnu-gcc-ranlib --version
-            x86_64-pc-linux-gnu-gcc-ranlib --help
 
 test:
   environment:
@@ -259,18 +248,6 @@ test:
         gcov-tool-13 --help
         lto-dump-13 --version
         lto-dump-13 --help
-        x86_64-pc-linux-gnu-c++-13 --version
-        x86_64-pc-linux-gnu-c++-13 --help
-        x86_64-pc-linux-gnu-g++-13 --version
-        x86_64-pc-linux-gnu-g++-13 --help
-        x86_64-pc-linux-gnu-gcc-13 --version
-        x86_64-pc-linux-gnu-gcc-13 --help
-        x86_64-pc-linux-gnu-gcc-ar-13 --version
-        x86_64-pc-linux-gnu-gcc-ar-13 --help
-        x86_64-pc-linux-gnu-gcc-nm-13 --version
-        x86_64-pc-linux-gnu-gcc-nm-13 --help
-        x86_64-pc-linux-gnu-gcc-ranlib-13 --version
-        x86_64-pc-linux-gnu-gcc-ranlib-13 --help
     - name: hello world c
       runs: |
         cat >hello.c <<"EOF"
