wip(datadog-agent): add nvml integration subpackage
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -75,6 +75,10 @@ pipeline:
       tag: ${{package.version}}
       expected-commit: cf3983981cf2ac2fdc6b907aa70d86c1d9736b66
 
+  - uses: patch
+    with:
+      patches: /home/build/integration-cmd-install.patch
+
   # Install `invoke` (build) dependencies. We ultimately package with venv so
   # these won't leak into the package.
   - runs: |
@@ -201,6 +205,49 @@ pipeline:
   - uses: strip
 
 subpackages:
+  - name: datadog-agent-nvml
+    description: "Datadog Agent with NVML integration"
+    dependencies:
+      runtime:
+        - datadog-agent
+    pipeline:
+      - uses: git-checkout
+        working-directory: /home/integrations-core
+        with:
+          repository: https://github.com/DataDog/integrations-core
+          tag: ${{package.version}}
+          expected-commit: d176ce0f74930eea4ddf66325a95e7da9d7fb9e1 # needs to be updated with each new release
+      - uses: git-checkout
+        working-directory: /home/integrations-extra
+        with:
+          repository: https://github.com/DataDog/integrations-extra
+          tag: nvml-1.0.9
+          expected-commit: d38c5cdb4ab4d07f4432afb25e0ccd70341efb51
+      - working-directory: /home/build
+        runs: |
+          export PYTHONPATH="/usr/share/datadog-agent/lib/python3.11/site-packages"
+          export PATH="/usr/share/datadog-agent/bin/:${PATH}"
+
+          cp /home/integrations-extra/nvml-1.0.9/nvml/requirements.in .
+          pip3 install -r requirements.in
+          pip3 freeze > final_constraints-py3.txt
+
+          # TODO: require agent installed - maybe just copy it over from main package's ${{targets.destdir}}
+          mkdir -p /etc/datadog-agent /usr/bin /usr/lib /usr/include
+          cp -rp ${{targets.destdir}}/etc/* /etc/
+          cp -rp ${{targets.destdir}}/usr/bin/* /usr/bin/
+          cp -rp ${{targets.destdir}}/usr/lib/* /usr/lib/
+          cp -rp ${{targets.destdir}}/usr/include/* /usr/include/
+
+          # TODO: require integration-core/datadog_checks_downloader - should be already in the Agent wheel
+          pip install /home/integrations/datadog_checks_downloader/
+
+          # This is needed to work around the error "ValueError: ZIP does not support timestamps before 1980"
+          SOURCE_DATE_EPOCH=315532800
+
+          cp /home/integrations-core/requirements-agent-release.txt .
+          #/usr/bin/agent integration install datadog-nvml==1.0.9 --third-party
+
   - name: datadog-agent-jmx
     description: "Datadog agent with JMX integration"
     dependencies:
