feat: add systemd units for docker, containerd, sshd, logind and systemd stubs configs for network and logind
Signed-off-by: Luca Di Maio <luca.dimaio1@gmail.com>

--- a/containerd.yaml
+++ b/containerd.yaml
@@ -62,6 +62,16 @@ subpackages:
       - runs: |
           install -Dm755 "./bin/${{range.key}}" "${{targets.subpkgdir}}"/usr/bin/${{range.key}}
 
+  - name: containerd-service
+    description: "Systemd services for containerd"
+    dependencies:
+      runtime:
+        - containerd
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.subpkgdir}}"/usr/lib/systemd/system/
+          install -Dm644 containerd-custom.service "${{targets.subpkgdir}}"/usr/lib/systemd/system/containerd.service
+
 update:
   enabled: true
   github:
