--- a/docker.yaml
+++ b/docker.yaml
@@ -164,6 +164,18 @@ subpackages:
       - runs: |
           install -Dm755 /home/build/hack/dind "${{targets.subpkgdir}}"/usr/bin/dind
 
+  - name: dockerd-service
+    description: "Systemd services for docker"
+    dependencies:
+      runtime:
+        - docker
+        - containerd-service
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.subpkgdir}}"/usr/lib/systemd/system/
+          install -Dm644 docker.socket "${{targets.subpkgdir}}"/usr/lib/systemd/system/
+          install -Dm644 docker.service "${{targets.subpkgdir}}"/usr/lib/systemd/system/
+
 update:
   enabled: true
   github:
