--- a/openssh.yaml
+++ b/openssh.yaml
@@ -145,6 +145,16 @@ subpackages:
             ssh-keygen -A -q -N ""    # This is unfortunate, but scriplets don't run in test environments, so force this here
             /usr/sbin/sshd
 
+  - name: "openssh-service"
+    description: "System OpenSSH server unit"
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.subpkgdir}}"/usr/lib/systemd/system
+          install -Dm644  sshd.service "${{targets.subpkgdir}}"/usr/lib/systemd/system
+    dependencies:
+      runtime:
+        - openssh-server
+
   - name: "openssh-server-config"
     description: "OpenSSH server configuration"
     pipeline:
