--- a/systemd.yaml
+++ b/systemd.yaml
@@ -20,6 +20,7 @@ environment:
       - coreutils
       - gperf
       - kmod-dev
+      - libbpf
       - libbpf-dev
       - libcap-dev
       - libmount
@@ -125,6 +126,38 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/etc
           ln -s /usr/lib/systemd/systemd ${{targets.subpkgdir}}/init
           ln -sf /usr/share/zoneinfo/UTC ${{targets.subpkgdir}}/etc/localtime
+
+  - name: "systemd-default-network"
+    description: "Configure network to DHCP on default interfaces"
+    dependencies:
+      runtime:
+        - ${{package.name}}
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/etc/systemd/network/
+          cp 20-eth.network  ${{targets.subpkgdir}}/etc/systemd/network/
+          cp 21-enp.network  ${{targets.subpkgdir}}/etc/systemd/network/
+
+  - name: "systemd-logind-stub"
+    description: "Fake login service to boot directly into a shell"
+    dependencies:
+      runtime:
+        - ${{package.name}}
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/usr/lib/systemd/system/
+          cp ${{targets.destdir}}/usr/lib/systemd/system/serial-getty@.service ${{targets.subpkgdir}}/usr/lib/systemd/system/
+          sed -i "s|^ExecStart=.*agetty.*|ExecStart=-/bin/sh -l|" ${{targets.subpkgdir}}/usr/lib/systemd/system/serial-getty@.service
+
+  - name: "systemd-logind-service"
+    description: "Logind service"
+    dependencies:
+      runtime:
+        - ${{package.name}}
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/usr/lib/systemd/system/
+          mv ${{targets.destdir}}/usr/lib/systemd/system/systemd-logind.service ${{targets.subpkgdir}}/usr/lib/systemd/system/
 
 update:
   enabled: true
