--- a/systemd.yaml
+++ b/systemd.yaml
@@ -99,13 +99,13 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/usr/lib/kernel/
           mkdir -p ${{targets.subpkgdir}}/usr/lib/systemd/
           mkdir -p ${{targets.subpkgdir}}/usr/lib/systemd/system-generators/
-          cp -r ${{targets.destdir}}/etc/kernel ${{targets.subpkgdir}}/etc/
-          cp -r ${{targets.destdir}}/usr/bin/kernel-install ${{targets.subpkgdir}}/usr/bin/
-          cp -r ${{targets.destdir}}/usr/bin/bootctl ${{targets.subpkgdir}}/usr/bin/
-          cp -r ${{targets.destdir}}/usr/lib/kernel ${{targets.subpkgdir}}/usr/lib/
-          cp -r ${{targets.destdir}}/usr/lib/systemd/boot ${{targets.subpkgdir}}/usr/lib/systemd/
-          cp -r ${{targets.destdir}}/usr/lib/systemd/systemd-bless-boot ${{targets.subpkgdir}}/usr/lib/systemd/
-          cp -r ${{targets.destdir}}/usr/lib/systemd/system-generators/systemd-bless-boot-generator ${{targets.subpkgdir}}/usr/lib/systemd/system-generators/
+          mv ${{targets.destdir}}/etc/kernel ${{targets.subpkgdir}}/etc/
+          mv ${{targets.destdir}}/usr/bin/kernel-install ${{targets.subpkgdir}}/usr/bin/
+          mv ${{targets.destdir}}/usr/bin/bootctl ${{targets.subpkgdir}}/usr/bin/
+          mv ${{targets.destdir}}/usr/lib/kernel ${{targets.subpkgdir}}/usr/lib/
+          mv ${{targets.destdir}}/usr/lib/systemd/boot ${{targets.subpkgdir}}/usr/lib/systemd/
+          mv ${{targets.destdir}}/usr/lib/systemd/systemd-bless-boot ${{targets.subpkgdir}}/usr/lib/systemd/
+          mv ${{targets.destdir}}/usr/lib/systemd/system-generators/systemd-bless-boot-generator ${{targets.subpkgdir}}/usr/lib/systemd/system-generators/
     test:
       pipeline:
         - runs: |
