fix(services): systemd units should pull systemd
Signed-off-by: Luca Di Maio <luca.dimaio1@gmail.com>

--- a/containerd.yaml
+++ b/containerd.yaml
@@ -67,6 +67,7 @@ subpackages:
     dependencies:
       runtime:
         - containerd
+        - systemd
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/lib/systemd/system/
