--- a/docker.yaml
+++ b/docker.yaml
@@ -170,6 +170,7 @@ subpackages:
       runtime:
         - docker
         - containerd-service
+        - systemd
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/lib/systemd/system/
