--- a/openssh.yaml
+++ b/openssh.yaml
@@ -153,6 +153,7 @@ subpackages:
           install -Dm644  sshd.service "${{targets.subpkgdir}}"/usr/lib/systemd/system
     dependencies:
       runtime:
+        - systemd
         - openssh-server
 
   - name: "openssh-server-config"
