Switch from eudev to systemd-udev
eudev is musl port of systemd project udev component. As Wolfi is
glibc based and can support systemd, there is no need to build or use
eudev. Start transition from eudev to systemd, with goal of removing
eudev.

--- a/bluez.yaml
+++ b/bluez.yaml
@@ -2,7 +2,7 @@
 package:
   name: bluez
   version: "5.79"
-  epoch: 0
+  epoch: 1
   description: Tools for the Bluetooth protocol stack
   copyright:
     - license: GPL-2.0-or-later AND BSD-2-Clause AND MIT
@@ -18,7 +18,6 @@ environment:
       - dbus
       - dbus-dev
       - ell-dev
-      - eudev-dev
       - glib-dev
       - icu-dev
       - json-c-dev
@@ -30,6 +29,7 @@ environment:
       - py3-pygments
       - python3
       - readline-dev
+      - systemd-dev
 
 pipeline:
   - uses: fetch
