--- a/libdrm.yaml
+++ b/libdrm.yaml
@@ -2,7 +2,7 @@
 package:
   name: libdrm
   version: 2.4.123
-  epoch: 1
+  epoch: 2
   description: Userspace interface to kernel DRM services
   copyright:
     - license: MIT
@@ -15,11 +15,11 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - eudev-dev
       - libpciaccess-dev
       - linux-headers
       - meson
       - openssf-compiler-options
+      - systemd-dev
       - xmlto
 
 pipeline:
