--- a/eudev.yaml
+++ b/eudev.yaml
@@ -1,7 +1,7 @@
 package:
   name: eudev
   version: 3.2.14
-  epoch: 4
+  epoch: 5
   description: init system agnostic fork of systemd-udev
   copyright:
     - license: GPL-2.0-only
@@ -59,6 +59,7 @@ subpackages:
     dependencies:
       runtime:
         - eudev
+        - eudev-libs
     description: eudev dev
     test:
       pipeline:
@@ -70,6 +71,8 @@ subpackages:
     description: eudev manpages
 
   - name: eudev-libs
+    dependencies:
+      provider-priority: 5
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib
