--- a/libinput.yaml
+++ b/libinput.yaml
@@ -2,7 +2,7 @@
 package:
   name: libinput
   version: 1.26.2
-  epoch: 1
+  epoch: 2
   description: Library for handling input devices
   copyright:
     - license: MIT
@@ -15,7 +15,6 @@ environment:
       - ca-certificates-bundle
       - check-dev
       - cmake
-      - eudev-dev
       - gtk-3-dev
       - libevdev-dev
       - meson
@@ -25,6 +24,7 @@ environment:
       - py3-pyyaml
       - py3-udev
       - python3
+      - systemd-dev
 
 pipeline:
   - uses: fetch
@@ -72,7 +72,7 @@ subpackages:
     dependencies:
       runtime:
         - libinput
-        - eudev-dev
+        - systemd-dev
     description: libinput dev
 
 update:
