--- a/mesa.yaml
+++ b/mesa.yaml
@@ -1,7 +1,7 @@
 package:
   name: mesa
   version: 24.2.6
-  epoch: 0
+  epoch: 1
   description: Mesa DRI OpenGL library
   copyright:
     - license: MIT AND SGI-B-2.0 AND BSL-1.0
@@ -19,7 +19,6 @@ environment:
       - busybox
       - ca-certificates-bundle
       - elfutils-dev
-      - eudev-dev
       - expat-dev
       - findutils
       - flex
@@ -52,6 +51,7 @@ environment:
       - py3-pyyaml
       - py3-setuptools
       - python3
+      - systemd-dev
       - vulkan-loader
       - wayland-dev
       - wayland-protocols
