--- a/multipath-tools.yaml
+++ b/multipath-tools.yaml
@@ -1,7 +1,7 @@
 package:
   name: multipath-tools
   version: 0.10.0
-  epoch: 1
+  epoch: 2
   description: Device Mapper Multipathing Driver
   copyright:
     - license: LGPL-2.0-only
@@ -15,14 +15,14 @@ environment:
       - busybox
       - ca-certificates-bundle
       - device-mapper
-      - eudev
-      - eudev-dev
       - json-c-dev
       - libaio-dev
       - lvm2-dev
       - ncurses-dev
       - perl
       - readline-dev
+      - systemd
+      - systemd-dev
       - userspace-rcu-dev
       - util-linux-dev
 
