--- a/qt5-qtbase.yaml
+++ b/qt5-qtbase.yaml
@@ -2,7 +2,7 @@
 package:
   name: qt5-qtbase
   version: 5.15.15
-  epoch: 2
+  epoch: 3
   description: Qt5 - QtBase components
   copyright:
     - license: LGPL-3.0-only OR GPL-3.0-only WITH Qt-GPL-exception-1.0
@@ -20,7 +20,6 @@ environment:
       - ca-certificates-bundle
       - cups-dev
       - dbus-dev
-      - eudev-dev
       - flex
       - fontconfig-dev
       - freetds-dev
@@ -60,6 +59,7 @@ environment:
       - perl-dev
       - postgresql-16-dev
       - sqlite-dev
+      - systemd-dev
       - unixodbc-dev
       - vulkan-headers
       - xcb-util-dev
