--- a/xorg-server.yaml
+++ b/xorg-server.yaml
@@ -1,7 +1,7 @@
 package:
   name: xorg-server
   version: 21.1.14
-  epoch: 1
+  epoch: 2
   description: "X Server"
   copyright:
     - license: SGI-B-2.0
@@ -24,7 +24,6 @@ environment:
       - build-base
       - busybox
       - dbus-dev
-      - eudev-dev
       - freetype-dev
       - libdrm
       - libdrm-dev
@@ -46,6 +45,7 @@ environment:
       - openssf-compiler-options
       - openssl-dev
       - pixman-dev
+      - systemd-dev
       - zlib-dev
 
 data:
