fix(datadog-agent-integrations-core): add missing downloader wheel
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -239,9 +239,6 @@ subpackages:
           cp -rp ${{targets.destdir}}/usr/lib/* /usr/lib/
           cp -rp ${{targets.destdir}}/usr/include/* /usr/include/
 
-          # TODO: require integration-core/datadog_checks_downloader - should be already in the Agent wheel
-          pip install /home/integrations/datadog_checks_downloader/
-
           # This is needed to work around the error "ValueError: ZIP does not support timestamps before 1980"
           SOURCE_DATE_EPOCH=315532800
 
@@ -323,6 +320,7 @@ subpackages:
 
               # Install core and dependencies
               .venv/bin/pip install \
+                "./datadog_checks_downloader[deps]" \
                 "./datadog_checks_base[deps, http]" \
                 $(echo ${checks} | xargs -n1 echo | sed 's|^|./|')
 
