fix(datadog-agent-nvml): fix typo in gh repository url
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -218,9 +218,9 @@ subpackages:
           tag: ${{package.version}}
           expected-commit: d176ce0f74930eea4ddf66325a95e7da9d7fb9e1 # needs to be updated with each new release
       - uses: git-checkout
-        working-directory: /home/integrations-extra
+        working-directory: /home/integrations-extras
         with:
-          repository: https://github.com/DataDog/integrations-extra
+          repository: https://github.com/DataDog/integrations-extras
           tag: nvml-1.0.9
           expected-commit: d38c5cdb4ab4d07f4432afb25e0ccd70341efb51
       - working-directory: /home/build
@@ -228,7 +228,7 @@ subpackages:
           export PYTHONPATH="/usr/share/datadog-agent/lib/python3.11/site-packages"
           export PATH="/usr/share/datadog-agent/bin/:${PATH}"
 
-          cp /home/integrations-extra/nvml-1.0.9/nvml/requirements.in .
+          cp /home/integrations-extras/nvml-1.0.9/nvml/requirements.in .
           pip3 install -r requirements.in
           pip3 freeze > final_constraints-py3.txt
 
@@ -242,6 +242,7 @@ subpackages:
           # This is needed to work around the error "ValueError: ZIP does not support timestamps before 1980"
           SOURCE_DATE_EPOCH=315532800
 
+          # TODO: we probably need to ship this too with the integrations-core subpackage.
           cp /home/integrations-core/requirements-agent-release.txt .
           #/usr/bin/agent integration install datadog-nvml==1.0.9 --third-party
 
