fix(datadog-agent-nvml): fix typo in extras integrations path
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -228,7 +228,7 @@ subpackages:
           export PYTHONPATH="/usr/share/datadog-agent/lib/python3.11/site-packages"
           export PATH="/usr/share/datadog-agent/bin/:${PATH}"
 
-          cp /home/integrations-extras/nvml-1.0.9/nvml/requirements.in .
+          cp /home/integrations-extras/nvml/requirements.in .
           pip3 install -r requirements.in
           pip3 freeze > final_constraints-py3.txt
 
