fix(datadog-agent-nvml): move requirements to dd-agent home
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -227,10 +227,11 @@ subpackages:
         runs: |
           export PYTHONPATH="/usr/share/datadog-agent/lib/python3.11/site-packages"
           export PATH="/usr/share/datadog-agent/bin/:${PATH}"
+          export DD_HOME="/"
 
-          cp /home/integrations-extras/nvml/requirements.in .
+          cp /home/integrations-extras/nvml/requirements.in $DD_HOME
           pip3 install -r requirements.in
-          pip3 freeze > final_constraints-py3.txt
+          pip3 freeze > "${DD_HOME}/final_constraints-py3.txt"
 
           # TODO: require agent installed - maybe just copy it over from main package's ${{targets.destdir}}
           mkdir -p /etc/datadog-agent /usr/bin /usr/lib /usr/include
@@ -243,8 +244,11 @@ subpackages:
           SOURCE_DATE_EPOCH=315532800
 
           # TODO: we probably need to ship this too with the integrations-core subpackage.
-          cp /home/integrations-core/requirements-agent-release.txt .
-          #/usr/bin/agent integration install datadog-nvml==1.0.9 --third-party
+          cp /home/integrations-core/requirements-agent-release.txt $DD_HOME
+          # This is expected by the `agent integration install` command as ${DD_HOME}/embedded/bin/python${PY_MAJOR_VERSION}.
+          mkdir -p ${DD_HOME}/embedded/bin
+          ln -s $(which python3.11) ${DD_HOME}/embedded/bin/python3
+          /usr/bin/agent integration install datadog-nvml==1.0.9 --third-party
 
   - name: datadog-agent-jmx
     description: "Datadog agent with JMX integration"
