misc: enable openssf compiler options

--- a/pnpm.yaml
+++ b/pnpm.yaml
@@ -1,7 +1,7 @@
 package:
   name: pnpm
   version: 9.12.3
-  epoch: 0
+  epoch: 1
   description: "Fast, disk space efficient package manager"
   copyright:
     - license: MIT
@@ -20,6 +20,7 @@ environment:
       - node-gyp
       - nodejs-18
       - npm
+      - openssf-compiler-options
       - pnpm
       - python3
       - wolfi-base
