--- a/apache2.yaml
+++ b/apache2.yaml
@@ -1,7 +1,7 @@
 package:
   name: apache2
   version: 2.4.62
-  epoch: 4
+  epoch: 5
   description: "Apache HTTP Server"
   copyright:
     - license: Apache-2.0
@@ -21,6 +21,7 @@ environment:
       - libxml2-dev
       - lua5.4-dev
       - nghttp2-dev
+      - openssf-compiler-options
       - openssl-dev
       - pcre2-dev
       - readline-dev
