--- a/glib.yaml
+++ b/glib.yaml
@@ -1,7 +1,7 @@
 package:
   name: glib
   version: 2.82.1
-  epoch: 0
+  epoch: 1
   description: Common C routines used by Gtk+ and other libs
   copyright:
     - license: LGPL-2.1-or-later
@@ -23,6 +23,7 @@ environment:
       - libxslt
       - libxslt-dev
       - meson
+      - openssf-compiler-options
       - pcre2-dev
       - py3-docutils
       - py3-packaging
