fix(datadog-agent-nvml): allow root to install the integration plugin
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -230,7 +230,7 @@ subpackages:
           export DD_HOME="/"
 
           cp /home/integrations-extras/nvml/requirements.in $DD_HOME
-          pip3 install -r requirements.in
+          pip3 install -r "${DD_HOME}/requirements.in"
           pip3 freeze > "${DD_HOME}/final_constraints-py3.txt"
 
           # TODO: require agent installed - maybe just copy it over from main package's ${{targets.destdir}}
@@ -248,7 +248,7 @@ subpackages:
           # This is expected by the `agent integration install` command as ${DD_HOME}/embedded/bin/python${PY_MAJOR_VERSION}.
           mkdir -p ${DD_HOME}/embedded/bin
           ln -s $(which python3.11) ${DD_HOME}/embedded/bin/python3
-          /usr/bin/agent integration install datadog-nvml==1.0.9 --third-party
+          /usr/bin/agent integration install datadog-nvml==1.0.9 --third-party --allow-root
 
   - name: datadog-agent-jmx
     description: "Datadog agent with JMX integration"
