chore(datadog-agent-nvml): move checks_downloader wheel to nvml subpkg
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -248,6 +248,7 @@ subpackages:
           # This is expected by the `agent integration install` command as ${DD_HOME}/embedded/bin/python${PY_MAJOR_VERSION}.
           mkdir -p ${DD_HOME}/embedded/bin
           ln -s $(which python3.11) ${DD_HOME}/embedded/bin/python3
+          python3.11 -m pip install "/home/integrations-core/datadog_checks_downloader[deps]"
           /usr/bin/agent integration install datadog-nvml==1.0.9 --third-party --allow-root
 
   - name: datadog-agent-jmx
@@ -325,7 +326,6 @@ subpackages:
 
               # Install core and dependencies
               .venv/bin/pip install \
-                "./datadog_checks_downloader[deps]" \
                 "./datadog_checks_base[deps, http]" \
                 $(echo ${checks} | xargs -n1 echo | sed 's|^|./|')
 
