fix(datadog-agent-nvml): add missing integrations-core deps
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -366,9 +366,12 @@ subpackages:
           # TODO: we probably need to ship this too with the integrations-core subpackage.
           cp /home/integrations-core/requirements-agent-release.txt $DD_HOME
           # This is expected by the `agent integration install` command as ${DD_HOME}/embedded/bin/python${PY_MAJOR_VERSION}.
-          mkdir -p ${DD_HOME}/embedded/bin
+          mkdir -p ${DD_HOME}/embedded/bin $DD_HOME/embedded/lib/python3.11/site-packages
           ln -s $(which python3.11) ${DD_HOME}/embedded/bin/python3
-          python3.11 -m pip install "/home/integrations-core/datadog_checks_downloader[deps]"
+          ${DD_HOME}/embedded/bin/python3 -m pip install "/home/integrations-core/datadog_checks_downloader[deps]"
+          ln -s $(which python3.11) /usr/bin/python
+          cp -rp ./melange-out/datadog-agent-core-integrations/usr/share/datadog-agent/lib/python3.11/site-packages/* \
+            $DD_HOME/embedded/lib/python3.11/site-packages/
           /usr/bin/agent integration install datadog-nvml==1.0.9 --third-party --allow-root
 
   - name: datadog-cluster-agent
