fix(datadog-agent-nvml): add missing datadog-nvml wheel data
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -372,6 +372,14 @@ subpackages:
           ln -s $(which python3.11) /usr/bin/python
           cp -rp ./melange-out/datadog-agent-core-integrations/usr/share/datadog-agent/lib/python3.11/site-packages/* \
             $DD_HOME/embedded/lib/python3.11/site-packages/
+          # TODO: the following should not be needed - fixes:
+          # $ /usr/bin/agent integration install datadog-nvml==1.0.9 --third-party --allow-root
+          # ...
+          # Installing collected packages: datadog-nvml
+          # Successfully installed datadog-nvml-1.0.9
+          # WARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager, possibly rendering your system unusable.It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv. Use the --root-user-action option if you know what you are doing and want to suppress this warning.
+          # Installed datadog-nvml 1.0.9Error: Some errors prevented moving datadog-nvml configuration files: open /embedded/lib/python3.11/site-packages/datadog_checks/nvml/data: no such file or directory 
+          pip install /home/integrations-extras/nvml
           /usr/bin/agent integration install datadog-nvml==1.0.9 --third-party --allow-root
 
   - name: datadog-cluster-agent
