--- a/py3-influxdb-client.yaml
+++ b/py3-influxdb-client.yaml
@@ -1,23 +1,29 @@
 package:
   name: py3-influxdb-client
   version: 1.47.0
-  epoch: 0
-  description: "InfluxDB 2.0 python client"
+  epoch: 1
+  description: InfluxDB 2.0 python client
   copyright:
     - license: MIT
+  dependencies:
+    provider-priority: 0
+
+vars:
+  pypi-package: influxdb-client
+  import: influxdb_client
+
+data:
+  - name: py-versions
+    items:
+      3.10: '310'
+      3.11: '311'
+      3.12: '312'
+      3.13: '300'
 
 environment:
   contents:
     packages:
-      - build-base
-      - busybox
-      - ca-certificates-bundle
-      - py3-certifi
-      - py3-dateutil
-      - py3-pip
-      - py3-setuptools
-      - py3-urllib3
-      - wolfi-base
+      - py3-supported-build-base
 
 pipeline:
   - uses: git-checkout
@@ -26,9 +32,47 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 06b71146b20d2f3e7d40eac4fe5d2d81e4b02c62
 
-  - uses: py/pip-build-install
+subpackages:
+  - range: py-versions
+    name: py${{range.key}}-${{vars.pypi-package}}
+    description: python${{range.key}} version of ${{vars.pypi-package}}
+    dependencies:
+      provider-priority: ${{range.value}}
+      provides:
+        - py3-${{vars.pypi-package}}
+      runtime:
+        - py${{range.key}}-certifi
+        - py${{range.key}}-dateutil
+        - py${{range.key}}-reactivex
+        - py${{range.key}}-urllib3
+    pipeline:
+      - uses: py/pip-build-install
+        with:
+          python: python${{range.key}}
+      - uses: strip
+    test:
+      pipeline:
+        - uses: python/import
+          with:
+            python: python${{range.key}}
+            imports: |
+              import ${{vars.import}}
 
-  - uses: strip
+  - name: py3-supported-${{vars.pypi-package}}
+    description: meta package providing ${{vars.pypi-package}} for supported python versions.
+    dependencies:
+      runtime:
+        - py3.10-${{vars.pypi-package}}
+        - py3.11-${{vars.pypi-package}}
+        - py3.12-${{vars.pypi-package}}
+        - py3.13-${{vars.pypi-package}}
+
+test:
+  pipeline:
+    - uses: python/import
+      with:
+        imports: |
+          import ${{vars.import}}
 
 update:
   enabled: true
