--- a/kubernetes-1.31.yaml
+++ b/kubernetes-1.31.yaml
@@ -1,7 +1,7 @@
 package:
   name: kubernetes-1.31
   version: 1.31.2
-  epoch: 0
+  epoch: 1
   description: Production-Grade Container Scheduling and Management
   copyright:
     - license: Apache-2.0
@@ -24,6 +24,7 @@ environment:
       - jq
       - libcap-utils
       - linux-headers
+      - openssf-compiler-options
       - rsync
 
 var-transforms:
