fix(services): use upstream services, fix PATH where needed
Signed-off-by: Luca Di Maio <luca.dimaio1@gmail.com>

--- a/containerd.yaml
+++ b/containerd.yaml
@@ -71,7 +71,9 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/lib/systemd/system/
-          install -Dm644 containerd-custom.service "${{targets.subpkgdir}}"/usr/lib/systemd/system/containerd.service
+          install -Dm644 containerd.service "${{targets.subpkgdir}}"/usr/lib/systemd/system/containerd.service
+          sed -i "s|/usr/local/bin|/usr/bin|g" "${{targets.subpkgdir}}"/usr/lib/systemd/system/containerd.service
+          sed -i "s|/sbin|/usr/sbin|g" "${{targets.subpkgdir}}"/usr/lib/systemd/system/containerd.service
 
 update:
   enabled: true
