--- a/docker.yaml
+++ b/docker.yaml
@@ -174,8 +174,9 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/lib/systemd/system/
-          install -Dm644 docker.socket "${{targets.subpkgdir}}"/usr/lib/systemd/system/
-          install -Dm644 docker.service "${{targets.subpkgdir}}"/usr/lib/systemd/system/
+          install -Dm644 contrib/init/systemd/docker.socket "${{targets.subpkgdir}}"/usr/lib/systemd/system/
+          install -Dm644 contrib/init/systemd/docker.service "${{targets.subpkgdir}}"/usr/lib/systemd/system/
+          sed -i "s|\[Service\]|[Service]\nEnvironment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"|g" "${{targets.subpkgdir}}"/usr/lib/systemd/system/docker.service
 
 update:
   enabled: true
