add custom log4j2.properties

--- a/logstash-8.yaml
+++ b/logstash-8.yaml
@@ -17,7 +17,7 @@
 package:
   name: logstash-8
   version: 8.15.3
-  epoch: 4
+  epoch: 5
   description: Logstash - transport and process your logs, events, or other data
   copyright:
     - license: Apache-2.0
@@ -246,6 +246,10 @@ subpackages:
           # cp config to config.default because the entrypoint.sh run.sh init step wants something to copy
           cp -r "${{targets.subpkgdir}}"/opt/bitnami/logstash/config "${{targets.subpkgdir}}"/opt/bitnami/logstash/config.default
           cp -r "${{targets.subpkgdir}}"/opt/bitnami/logstash/pipeline "${{targets.subpkgdir}}"/opt/bitnami/logstash/pipeline.default
+          # bitnami have a custom log4j2.properties
+          cp "${{targets.subpkgdir}}"/opt/bitnami/logstash/config.default/log4j2.properties "${{targets.subpkgdir}}"/opt/bitnami/logstash/config.default/log4j2.orig.properties
+          rm -f "${{targets.subpkgdir}}"/opt/bitnami/logstash/config.default/log4j2.properties
+          install -Dm755 log4j2.custom.properties "${{targets.subpkgdir}}"/opt/bitnami/logstash/config.default/log4j2.properties
     test:
       environment:
         contents:
