--- a/datadog-agent-nvml.yaml
+++ b/datadog-agent-nvml.yaml
@@ -20,8 +20,9 @@ environment:
       - datadog-agent-core-integrations
       - rsync
   environment:
-    DD_HOME: /
+    DD_HOME: / # agent being run by root expects /.
     DD_SHARED: /usr/share/datadog-agent
+    DD_CONF: /etc/datadog-agent/conf.d
 
 pipeline:
   # This integration wheel comes from the integrations-extras repository
@@ -44,7 +45,7 @@ pipeline:
       python -m venv .venv
       . .venv/bin/activate
 
-      # Use Python in virtual environment
+      # Use embedded Python in virtual environment.
       sed -i "s|$(pwd)/.venv|${DD_SHARED}|g" .venv/pyvenv.cfg
       sed -i "s|$(pwd)/.venv|${DD_SHARED}|g" .venv/bin/*
 
@@ -54,12 +55,17 @@ pipeline:
       # TODO: we probably need to ship this too with the integrations-core subpackage.
       cp /home/integrations-core/requirements-agent-release.txt $DD_HOME
 
-      # It seems that the agent integration install command doesnt look like at PYTHONPATH but
-      # looks for $DD_HOME/embedded directory in an hardcoded fashion.
+      # It seems that the agent integration install command doesnt look for dependencies
+      # at PYTHONPATH, instead it does it at $DD_HOME/embedded directory in an hardcoded fashion.
       ln -s $DD_SHARED $DD_HOME/embedded
       
-      # Dump the wheels before installing the integration.
-      rsync -az $DD_HOME/embedded/lib/python3.11/site-packages ./
+      # Dump the packages.
+      mkdir site-packages
+      rsync -az $DD_HOME/embedded/lib/python3.11/site-packages/ ./site-packages/
+
+      # Dump the configurations.
+      mkdir conf.d
+      rsync -az $DD_CONF/ ./conf.d/
 
       # This is needed to work around the error "ValueError: ZIP does not support timestamps before 1980"
       SOURCE_DATE_EPOCH=315532800
@@ -74,13 +80,21 @@ pipeline:
       find $DD_SHARED -name "__pycache__" -exec rm -rf {} +
 
       # Prepare the package content.
-      diff=$(rsync --include='*/' --exclude='*' --ignore-existing -rv --dry-run $DD_SHARED/lib/python3.11/site-packages/ ./site-packages/ | grep -v "sending incremental file list" | grep -v -E "^\./$|^sent .+ bytes|total size|^$")
+      diff_packages=$(rsync --include='*/' --exclude='*' --ignore-existing -rv --dry-run $DD_SHARED/lib/python3.11/site-packages/ ./site-packages/ | grep -v "sending incremental file list" | grep -v -E "^\./$|^sent .+ bytes|total size|^$")
+      diff_conf=$(rsync --include='*/' --exclude='*' --ignore-existing -rv --dry-run $DD_CONF/ ./conf.d/ | grep -v "sending incremental file list" | grep -v -E "^\./$|^sent .+ bytes|total size|^$")
 
-      # Include only the new wheels in the package, to be installed alongside the datadog-agent package.
-      mkdir -p "${{targets.contextdir}}${DD_SHARED}/lib/python3.11/site-packages/datadog_checks"
-      for wheel in $diff; do
-        cp -vr "${DD_SHARED}/lib/python3.11/site-packages/${wheel}" \
-          "${{targets.contextdir}}${DD_SHARED}/lib/python3.11/site-packages/${wheel}";
+      # Include the new packages.
+      packages_dir="${{targets.contextdir}}${DD_SHARED}/lib/python3.11/site-packages/"
+      mkdir -p "${packages_dir}/datadog_checks"
+      for package in $diff_packages; do
+        cp -vr "${DD_SHARED}/lib/python3.11/site-packages/${package}" $packages_dir;
+      done
+
+      # Include the new configurations.
+      conf_dir="${{targets.destdir}}${DD_CONF}/"
+      mkdir -p $conf_dir
+      for conf in $diff_conf; do
+        cp -vr "${DD_CONF}/${conf}" $conf_dir;
       done
 
       deactivate
