--- a/kserve-modelmesh.yaml
+++ b/kserve-modelmesh.yaml
@@ -1,7 +1,7 @@
 package:
   name: kserve-modelmesh
   version: 0.12.0
-  epoch: 2
+  epoch: 3
   description: The ModelMesh framework is a mature, general-purpose model serving management/routing layer designed for high-scale, high-density and frequently-changing model use cases.
   dependencies:
     runtime:
@@ -31,23 +31,27 @@ pipeline:
       mvn -B package -Dfile.encoding=UTF8 -DskipTests=true --file pom.xml
       mkdir -p ${{targets.destdir}}/opt/kserve/mmesh
       mv /home/build/target/dockerhome/* ${{targets.destdir}}/opt/kserve/mmesh/
-      chmod -R 775 ${{targets.destdir}}/opt/kserve/mmesh/
+
       echo "$(date +%Y%m%d)-$(git rev-parse --short HEAD)" > ${{targets.destdir}}/opt/kserve/mmesh/build-version
+      mkdir -p ${{targets.destdir}}/etc
+      mkdir -p ${{targets.destdir}}/opt/kserve/mmesh/log
+      chmod -R 775 ${{targets.destdir}}/opt/kserve/mmesh/
+      touch ${{targets.destdir}}/etc/environment
 
 subpackages:
   - name: kserve-modelmesh-compat
     description: "compat package with kserve/modelmesh image"
     pipeline:
       - runs: |
-          mkdir -p "${{targets.contextdir}}/usr/share/dockerhome"
-          ln -s /opt/kserve/mmesh/dockerhome "${{targets.contextdir}}/usr/share/dockerhome"
+          mkdir -p "${{targets.contextdir}}/opt/kserve"
+          ln -sf /opt/kserve/mmesh "${{targets.contextdir}}/opt/kserve/tas"
 
 test:
   pipeline:
     - name: Verify compat packages exist at the right directories
       runs: |
-        ls /opt/kserve/mmesh/dockerhome/lib/ | grep -q  'model-.*\.jar'
-        ls /opt/kserve/mmesh/dockerhome/ | grep -q 'start.sh'
+        ls /opt/kserve/mmesh/lib/ | grep -q  'model-.*\.jar'
+        ls /opt/kserve/mmesh/ | grep -q 'start.sh'
 
 update:
   enabled: true
