Adds linux-pam as runtime dependency
Signed-off-by: srishtih <srishti.hegde.sh@gmail.com>

--- a/kserve-modelmesh.yaml
+++ b/kserve-modelmesh.yaml
@@ -7,6 +7,7 @@ package:
     runtime:
       - bash # entrypoint script uses bash
       - openjdk-17-default-jvm
+      - linux-pam
   copyright:
     - license: Apache-2.0
 
@@ -36,7 +37,6 @@ pipeline:
       mkdir -p ${{targets.destdir}}/etc
       mkdir -p ${{targets.destdir}}/opt/kserve/mmesh/log
       chmod -R 775 ${{targets.destdir}}/opt/kserve/mmesh/
-      touch ${{targets.destdir}}/etc/environment
 
 subpackages:
   - name: kserve-modelmesh-compat
