test(datadog-agent-nvml): add initial testing
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent-nvml.yaml
+++ b/datadog-agent-nvml.yaml
@@ -100,6 +100,19 @@ pipeline:
 
       deactivate
 
+test:
+  environment:
+    contents:
+      packages:
+        - datadog-agent
+        - datadog-agent-core-integrations
+        - datadog-agent-nvml=${{package.full-version}}
+  pipeline:
+    - runs: |
+        ls /etc/datadog-agent/conf.d/nvml.d/conf.yaml.example
+        ls /usr/share/datadog-agent/lib/python3.11/site-packages/nvml/__init__.py
+        ls /usr/share/datadog-agent/lib/python3.11/site-packages/datadog_nvml-${{package.version}}.dist-info/WHEEL
+
 update:
   enabled: true
   github:
