Revert "Adds linux-pam as runtime dependency"
This reverts commit 1f2788a87da76f9b0f1dc9876015bb67680a4b1c.

--- a/kserve-modelmesh.yaml
+++ b/kserve-modelmesh.yaml
@@ -6,7 +6,6 @@ package:
   dependencies:
     runtime:
       - bash # entrypoint script uses bash
-      - linux-pam
       - openjdk-17-default-jvm
   copyright:
     - license: Apache-2.0
@@ -37,6 +36,7 @@ pipeline:
       mkdir -p ${{targets.destdir}}/etc
       mkdir -p ${{targets.destdir}}/opt/kserve/mmesh/log
       chmod -R 775 ${{targets.destdir}}/opt/kserve/mmesh/
+      touch ${{targets.destdir}}/etc/environment
 
 subpackages:
   - name: kserve-modelmesh-compat
