add logstash.yaml custom config

--- a/logstash-8.yaml
+++ b/logstash-8.yaml
@@ -17,7 +17,7 @@
 package:
   name: logstash-8
   version: 8.15.3
-  epoch: 5
+  epoch: 6
   description: Logstash - transport and process your logs, events, or other data
   copyright:
     - license: Apache-2.0
@@ -250,6 +250,9 @@ subpackages:
           cp "${{targets.subpkgdir}}"/opt/bitnami/logstash/config.default/log4j2.properties "${{targets.subpkgdir}}"/opt/bitnami/logstash/config.default/log4j2.orig.properties
           rm -f "${{targets.subpkgdir}}"/opt/bitnami/logstash/config.default/log4j2.properties
           install -Dm755 log4j2.custom.properties "${{targets.subpkgdir}}"/opt/bitnami/logstash/config.default/log4j2.properties
+          # also have a custom logstash.yml
+          rm "${{targets.subpkgdir}}"/opt/bitnami/logstash/config.default/logstash.yml
+          install -Dm755 logstash.custom.yml "${{targets.subpkgdir}}"/opt/bitnami/logstash/config.default/logstash.yml
     test:
       environment:
         contents:
