--- a/docker-selenium.yaml
+++ b/docker-selenium.yaml
@@ -4,7 +4,7 @@ package:
   # But the '-' is not a valid character according to APK versioning spec; and resulting
   # 'package format error' when trying to install the package. The workaround is
   # to replace '-' with '.', then mangling the version to replace back.
-  version: 4.25.0-20241024
+  version: 4.25.0.20241024
   epoch: 1
   description: Provides a simple way to run Selenium Grid with Chrome, Firefox, and Edge using Docker, making it easier to perform browser automation
   copyright:
