--- a/R-wk.yaml
+++ b/R-wk.yaml
@@ -1,7 +1,7 @@
 package:
   name: R-wk
   version: 0.9.4
-  epoch: 0
+  epoch: 1
   description: Lightweight Well-Known Geometry Parsing
   copyright:
     - license: MIT
@@ -15,6 +15,7 @@ environment:
       - R
       - R-dev
       - busybox
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
