refactor(datadog-agent-nvml): get agent integrtions requirements from package
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent-nvml.yaml
+++ b/datadog-agent-nvml.yaml
@@ -53,8 +53,8 @@ pipeline:
       # Dump plugin requirements. It's required by the `agent integration install` command.
       pip freeze > "${{vars.DD_HOME}}/final_constraints-py3.txt"
 
-      # TODO: we probably need to ship this too with the integrations-core subpackage.
-      cp /home/integrations-core/requirements-agent-release.txt ${{vars.DD_HOME}}
+      # Get agent requirements for integrations.
+      cp /opt/datadog-agent/requirements-agent-release.txt ${{vars.DD_HOME}}
 
       # It seems that the agent integration install command doesnt look for dependencies
       # at PYTHONPATH, instead it does it at ${{vars.DD_HOME}}/embedded directory in an hardcoded fashion.
