--- a/mountpoint-s3.yaml
+++ b/mountpoint-s3.yaml
@@ -1,7 +1,7 @@
 package:
   name: mountpoint-s3
   version: 1.10.0
-  epoch: 1
+  epoch: 2
   description: A simple, high-throughput file client for mounting an Amazon S3 bucket as a local file system.
   copyright:
     - license: Apache-2.0
@@ -14,9 +14,9 @@ environment:
       - ca-certificates-bundle
       - clang-19
       - cmake
-      - fuse3
-      - fuse3-dev
+      - fuse2-dev
       - libclang-cpp-19
+      - libgcc
       - pkgconf
       - rust
 
@@ -35,6 +35,16 @@ pipeline:
       output: mount-s3
 
   - uses: strip
+
+subpackages:
+  - name: ${{package.name}}-compat
+    description: "Compatibility package to place binaries in the location expected by upstream helm charts"
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/mountpoint-s3/bin
+          ln -sf /usr/bin/mount-s3 ${{targets.contextdir}}/mountpoint-s3/bin/mount-s3
+          ln -sf /usr/lib/libgcc_s.so.1 ${{targets.contextdir}}/mountpoint-s3/bin/libgcc_s.so.1
+          ln -sf /usr/lib/libfuse.so.2 ${{targets.contextdir}}/mountpoint-s3/bin/libfuse.so.2
 
 test:
   pipeline:
