test(datadog-agent-nvml): verify the integration version installed
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent-nvml.yaml
+++ b/datadog-agent-nvml.yaml
@@ -107,11 +107,21 @@ test:
         - datadog-agent
         - datadog-agent-core-integrations
         - datadog-agent-nvml=${{package.full-version}}
+    environment:
+      PYTHONPATH: /usr/share/datadog-agent/lib/python3.11/site-packages
+      PATH: /opt/datadog-agent/bin/agent/:/opt/datadog-agent/embedded/bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/lib/jvm/java-11-openjdk/bi
   pipeline:
     - runs: |
         ls /etc/datadog-agent/conf.d/nvml.d/conf.yaml.example
         ls /usr/share/datadog-agent/lib/python3.11/site-packages/nvml/__init__.py
         ls /usr/share/datadog-agent/lib/python3.11/site-packages/datadog_nvml-${{package.version}}.dist-info/WHEEL
+    - name: Verify the integration is installed # https://docs.datadoghq.com/agent/guide/integration-management/?tab=linux#install
+      runs: |
+        cp /opt/datadog-agent/requirements-agent-release.txt ${{vars.DD_HOME}}/
+        cp /opt/datadog-agent/final_constraints-py3.txt ${{vars.DD_HOME}}/
+        mkdir -p /embedded/bin && ln -s $(which python3) ${{vars.DD_HOME}}/embedded/bin/python3
+        VERSION="$(agent integration show datadog-nvml | cut -d ':' -f2 | tr -d ' ')"
+        test $VERSION = ${{package.version}}
 
 update:
   enabled: true
