fix(dagger): ensure the engine tag is set
make sure to set the engine tag when building the dagger CLI

Signed-off-by: Vincent Behar <v.behar@free.fr>

--- a/dagger.yaml
+++ b/dagger.yaml
@@ -19,7 +19,10 @@ pipeline:
 
   - uses: go/build
     with:
-      ldflags: -s -w  -X github.com/dagger/dagger/engine.Version=v${{package.version}}
+      ldflags: |
+        -s -w
+        -X github.com/dagger/dagger/engine.Version=v${{package.version}}
+        -X github.com/dagger/dagger/engine.Tag=v${{package.version}}
       output: dagger
       packages: ./cmd/dagger
 
