feat(datadog-agent): add integrations-extra compat subpackage
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -244,6 +244,35 @@ subpackages:
 
           cp -r Dockerfiles/agent/entrypoint.d ${{targets.subpkgdir}}/opt/entrypoints
 
+  - name: datadog-agent-extra-integrations-compat
+    dependencies:
+      runtime:
+        - python-3.11
+    pipeline:
+      - working-directory: /home/integrations
+        pipeline:
+          - uses: git-checkout
+            with:
+              repository: https://github.com/DataDog/integrations-core
+              tag: ${{package.version}}
+              expected-commit: 32f78c0c8aae400ecc1c14a5369e7f702be7b572 # needs to be updated with each new release
+          - runs: |
+              # This is needed to work around the error "ValueError: ZIP does not support timestamps before 1980"
+              SOURCE_DATE_EPOCH=315532800
+
+              # Create virtual environment
+              python3.11 -m venv .venv
+              . .venv/bin/activate
+
+              # Install check downloader, needed by the `agent integration install` command.
+              pip install "./datadog_checks_downloader[deps]"
+
+              # Include dependencies.
+              find .venv -name "*.pyc" -delete
+              find .venv -name "__pycache__" -exec rm -rf {} +
+              mkdir -p ${{targets.contextdir}}/usr/share/datadog-agent/lib/python3.11/site-packages/
+              cp -r .venv/lib/python3.11/site-packages/* ${{targets.contextdir}}/usr/share/datadog-agent/lib/python3.11/site-packages/
+
   - name: datadog-agent-core-integrations
     dependencies:
       runtime:
@@ -284,6 +313,10 @@ subpackages:
 
               mkdir -p ${{targets.contextdir}}/opt/datadog-agent
               .venv/bin/pip freeze > ${{targets.contextdir}}/opt/datadog-agent/final_constraints-py3.txt
+
+              # Install virtual environment
+              mkdir -p ${{targets.contextdir}}/usr/share/datadog-agent
+              cp -r .venv/* ${{targets.contextdir}}/usr/share/datadog-agent/
 
               # Include the agent's requirements for the core integrations.
               cp requirements-agent-release.txt ${{targets.contextdir}}/opt/datadog-agent/
