--- a/dagger.yaml
+++ b/dagger.yaml
@@ -1,7 +1,7 @@
 package:
   name: dagger
   version: 0.13.6
-  epoch: 0
+  epoch: 1
   description: Application Delivery as Code that Runs Anywhere
   copyright:
     - license: Apache-2.0
@@ -19,7 +19,10 @@ pipeline:
 
   - uses: go/build
     with:
-      ldflags: -s -w  -X github.com/dagger/dagger/engine.Version=v${{package.version}}
+      ldflags: |
+        -s -w
+        -X github.com/dagger/dagger/engine.Version=v${{package.version}}
+        -X github.com/dagger/dagger/engine.Tag=v${{package.version}}
       output: dagger
       packages: ./cmd/dagger
 
