chore: test refactors and version stream
Signed-off-by: Mritunjay Sharma <mritunjay.sharma@chainguard.dev>

--- a/azuredisk-csi-1.31.yaml
+++ b/azuredisk-csi-1.31.yaml
@@ -1,5 +1,5 @@
 package:
-  name: azuredisk-csi
+  name: azuredisk-csi-1.31
   version: 1.31.0
   epoch: 0
   description: Azure Disk CSI Driver
@@ -36,27 +36,16 @@ update:
   github:
     identifier: kubernetes-sigs/azuredisk-csi-driver
     strip-prefix: v
+    tag-filter: v1.31.
 
 test:
   pipeline:
-    - runs: |
-        # Run the azurediskplugin binary in the background
-        /usr/bin/azurediskplugin &
-
-        # Capture the process ID of azurediskplugin
-        AZUREDISKPLUGIN_PID=$!
-
-        # Sleep for a short time to allow the binary to start
-        sleep 2
-
-        # Check the process using a compatible method for BusyBox
-        if ps | grep -q '[a]zurediskplugin'; then
-          echo "azurediskplugin started successfully"
-        else
-          echo "azurediskplugin failed to start" >&2
-          exit 1
-        fi
-
-        # Kill the process once we have confirmed it started successfully
-        kill $AZUREDISKPLUGIN_PID
-        echo "azurediskplugin terminated after successful start"
+    # Run the azurediskplugin binary and verify its startup
+    - name: Run and test `azurediskplugin`
+      uses: test/daemon-check-output
+      with:
+        start: /usr/bin/azurediskplugin
+        timeout: 30
+        expected_output: |
+          Enabling controller service capability: CREATE_DELETE_VOLUME
+          Enabling volume access mode: SINGLE_NODE_WRITER
