--- a/ruby3.2-pg.yaml
+++ b/ruby3.2-pg.yaml
@@ -14,7 +14,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - git
-      - libpq-16
+      - libpq
       - postgresql-dev
       - ruby-3.2
       - ruby-3.2-dev
