comments adjustments for ruamel change

--- a/ruby3.2-logstash-mixin-ecs_compatibility_support.yaml
+++ b/ruby3.2-logstash-mixin-ecs_compatibility_support.yaml
@@ -26,17 +26,19 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 24426f92ff4606d97a973abf2dbee1e34dcc9515
 
-  # We will be adding the runtime dependency in the all the other projects
-  # anyway. So, remove the runtime dependency from the gemspec file to
-  # skip the dependency-check during the build.
-  - runs: sed -i "/add_runtime_dependency 'logstash-core'/d" ${{vars.gem}}.gemspec
+  - runs: |
+      # We will be adding the runtime dependency in the all the other projects
+      # anyway. So, remove the runtime dependency from the gemspec file to
+      # skip the dependency-check during the build.
+      sed -i "/add_runtime_dependency 'logstash-core'/d" ${{vars.gem}}.gemspec
 
   - uses: ruby/build
     with:
       gem: ${{vars.gem}}
 
-  # Get rid of the `-VERSION-ARCH-OS` suffix from the gem file name.
-  - runs: mv ${{vars.gem}}-*.gem ${{vars.gem}}.gem
+  - runs: |
+      # Get rid of the `-VERSION-ARCH-OS` suffix from the gem file name.
+      mv ${{vars.gem}}-*.gem ${{vars.gem}}.gem
 
   - uses: ruby/install
     with:
