--- a/ruby3.2-logstash-core-plugin-api.yaml
+++ b/ruby3.2-logstash-core-plugin-api.yaml
@@ -43,11 +43,12 @@ pipeline:
       # skip the dependency-check during the build.
       - runs: sed -i '/add_runtime_dependency "logstash-core"/d' ${{vars.gem}}.gemspec
       - runs: jruby -S gem build ${{vars.gem}}.gemspec
-      # Ideally, we should read the version from the ../versions.yml file since
-      # output file named like `logstash-core-plugin-api-2.1.16-java.gem`.
-      # But melange pipeline does not support evaluating expressions in
-      # the `uses/with` section. So, rename the gem file to exclude the version.
-      - runs: mv ${{vars.gem}}-*.gem ${{vars.gem}}.gem
+      - runs: |
+          # Ideally, we should read the version from the ../versions.yml file since
+          # output file named like `logstash-core-plugin-api-2.1.16-java.gem`.
+          # But melange pipeline does not support evaluating expressions in
+          # the `uses/with` section. So, rename the gem file to exclude the version.
+          mv ${{vars.gem}}-*.gem ${{vars.gem}}.gem
       - uses: ruby/install
         with:
           gem-file: ${{vars.gem}}.gem
