fix(datadog-agent-integrations-extra-compat): add only new packages
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -53,6 +53,7 @@ environment:
       - python3-dev~3.11 # strictly requires python3.11
       - systemd-dev
       - wget # Required for downloading clang-12 and kernel headers from debian
+      - rsync # Required to generate diffs for compat packages
   environment:
     # CGo allows Go programs to call C code
     CGO_ENABLED: "1"
@@ -264,14 +265,30 @@ subpackages:
               python3.11 -m venv .venv
               . .venv/bin/activate
 
+              mkdir /usr/share/datadog-agent
+              sed -i "s|$(pwd)/.venv|/usr/share/datadog-agent|g" .venv/pyvenv.cfg
+              sed -i "s|$(pwd)/.venv|/usr/share/datadog-agent|g" .venv/bin/*
+
+              # Dump the packages.
+              mkdir site-packages
+              rsync -az /usr/share/datadog-agent/lib/python3.11/site-packages/ ./site-packages/
+
               # Install check downloader, needed by the `agent integration install` command.
               pip install "./datadog_checks_downloader[deps]"
 
-              # Include dependencies.
+              # Cleanup.
               find .venv -name "*.pyc" -delete
               find .venv -name "__pycache__" -exec rm -rf {} +
-              mkdir -p ${{targets.contextdir}}/usr/share/datadog-agent/lib/python3.11/site-packages/
-              cp -r .venv/lib/python3.11/site-packages/* ${{targets.contextdir}}/usr/share/datadog-agent/lib/python3.11/site-packages/
+
+              # Prepare the package content.
+              diff_packages=$(rsync --include='*/' --exclude='*' --ignore-existing -rv --dry-run /usr/share/datadog-agent/lib/python3.11/site-packages/ ./site-packages/ | grep -v "sending incremental file list" | grep -v -E "^\./$|^sent .+ bytes|total size|^$")
+
+              # Include the new packages.
+              packages_dir="${{targets.contextdir}}/usr/share/datadog-agent/lib/python3.11/site-packages/"
+              mkdir -p "${packages_dir}"
+              for package in $diff_packages; do
+                cp -vr "/usr/share/datadog-agent/lib/python3.11/site-packages/${package}" $packages_dir;
+              done
 
   - name: datadog-agent-core-integrations
     dependencies:
@@ -313,10 +330,6 @@ subpackages:
 
               mkdir -p ${{targets.contextdir}}/opt/datadog-agent
               .venv/bin/pip freeze > ${{targets.contextdir}}/opt/datadog-agent/final_constraints-py3.txt
-
-              # Install virtual environment
-              mkdir -p ${{targets.contextdir}}/usr/share/datadog-agent
-              cp -r .venv/* ${{targets.contextdir}}/usr/share/datadog-agent/
 
               # Include the agent's requirements for the core integrations.
               cp requirements-agent-release.txt ${{targets.contextdir}}/opt/datadog-agent/
