fix(datadog-agent-integrations-extra-compat): create missing packages dir
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -270,7 +270,7 @@ subpackages:
               sed -i "s|$(pwd)/.venv|/usr/share/datadog-agent|g" .venv/bin/*
 
               # Dump the packages.
-              mkdir site-packages
+              mkdir -p /usr/share/datadog-agent/lib/python3.11/site-packages site-packages 
               rsync -az /usr/share/datadog-agent/lib/python3.11/site-packages/ ./site-packages/
 
               # Install check downloader, needed by the `agent integration install` command.
