fix(datadog-agent-integrations-extra-compat): cleanup at correct paths
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -277,8 +277,8 @@ subpackages:
               pip install "./datadog_checks_downloader[deps]"
 
               # Cleanup.
-              find .venv -name "*.pyc" -delete
-              find .venv -name "__pycache__" -exec rm -rf {} +
+              find /usr/share/datadog-agent -name "*.pyc" -delete
+              find /usr/share/datadog-agent -name "__pycache__" -exec rm -rf {} +
 
               # Prepare the package content.
               diff_packages=$(rsync --include='*/' --exclude='*' --ignore-existing -rv --dry-run /usr/share/datadog-agent/lib/python3.11/site-packages/ ./site-packages/ | grep -v "sending incremental file list" | grep -v -E "^\./$|^sent .+ bytes|total size|^$")
