chore: adds the same for subpackage
Signed-off-by: Mritunjay Sharma <mritunjay.sharma@chainguard.dev>

--- a/azuredisk-csi-1.31.yaml
+++ b/azuredisk-csi-1.31.yaml
@@ -33,6 +33,9 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"
           ln -sf /usr/bin/azurediskplugin ${{targets.subpkgdir}}/azurediskplugin
+    dependencies:
+      provides:
+        - azuredisk-csi-compat=${{package.full-version}}
 
 update:
   enabled: true
