--- a/libunistring.yaml
+++ b/libunistring.yaml
@@ -1,7 +1,7 @@
 package:
   name: libunistring
   version: "1.3"
-  epoch: 0
+  epoch: 1
   description: Library for manipulating Unicode strings and C strings
   copyright:
     - license: GPL-2.0-or-later OR LGPL-3.0-or-later
@@ -41,6 +41,13 @@ pipeline:
   - uses: strip
 
 subpackages:
+  - name: libunistring-doc
+    pipeline:
+      - uses: split/manpages
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/usr/share/doc
+          mv ${{targets.destdir}}/usr/share/doc/libunistring ${{targets.subpkgdir}}/usr/share/doc/libunistring
+
   - name: libunistring-static
     pipeline:
       - uses: split/static
