--- a/xz.yaml
+++ b/xz.yaml
@@ -1,7 +1,7 @@
 package:
   name: xz
   version: 5.6.3
-  epoch: 1
+  epoch: 2
   description: "Library and CLI tools for XZ and LZMA compressed files"
   copyright:
     - license: GPL-3.0-or-later
@@ -51,6 +51,9 @@ subpackages:
     description: "xz documentation"
     pipeline:
       - uses: split/manpages
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/usr/share/doc
+          mv ${{targets.destdir}}/usr/share/doc/xz ${{targets.subpkgdir}}/usr/share/doc/xz
 
 test:
   pipeline:
