--- a/ruby3.2-kubeclient.yaml
+++ b/ruby3.2-kubeclient.yaml
@@ -1,7 +1,7 @@
 package:
   name: ruby3.2-kubeclient
   version: 4.12.0
-  epoch: 1
+  epoch: 2
   description: An efficient, thread safe LRU cache.
   copyright:
     - license: MIT
@@ -29,6 +29,10 @@ pipeline:
       repository: https://github.com/ManageIQ/kubeclient
       tag: v${{package.version}}
       expected-commit: 0feda1d7de6bdab96286c81eb0f2ccc2127040cf
+
+  - uses: patch
+    with:
+      patches: bump-recursive-open-struct.patch
 
   - uses: ruby/build
     with:
