--- a/apache-nifi.yaml
+++ b/apache-nifi.yaml
@@ -1,7 +1,7 @@
 package:
   name: apache-nifi
   version: 1.27.0
-  epoch: 3
+  epoch: 4
   description: Apache NiFi is an easy to use, powerful, and reliable system to process and distribute data.
   copyright:
     - license: Apache-2.0
@@ -30,6 +30,7 @@ environment:
       - npm
       - openjdk-11
       - openjdk-11-default-jvm
+      - openssf-compiler-options
       - openssl-dev
       - rsync
       - wolfi-base
