az.yaml: Add openssf-options

--- a/az.yaml
+++ b/az.yaml
@@ -1,7 +1,7 @@
 package:
   name: az
   version: 2.65.0
-  epoch: 0
+  epoch: 1
   description: Azure CLI
   copyright:
     - license: MIT
@@ -12,6 +12,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - openssf-compiler-options
       - py3.11-pip
       - python-3.11
       - python-3.11-dev
