bluez.yaml: Add openssf-options

--- a/bluez.yaml
+++ b/bluez.yaml
@@ -2,7 +2,7 @@
 package:
   name: bluez
   version: "5.78"
-  epoch: 0
+  epoch: 1
   description: Tools for the Bluetooth protocol stack
   copyright:
     - license: GPL-2.0-or-later AND BSD-2-Clause AND MIT
@@ -25,6 +25,7 @@ environment:
       - libical-dev
       - libtool
       - linux-headers
+      - openssf-compiler-options
       - py3-docutils
       - py3-pygments
       - python3
