btrfs-progs.yaml: Add openssf-options

--- a/btrfs-progs.yaml
+++ b/btrfs-progs.yaml
@@ -1,7 +1,7 @@
 package:
   name: btrfs-progs
   version: "6.11"
-  epoch: 0
+  epoch: 1
   description: BTRFS filesystem utilities
   copyright:
     - license: GPL-2.0-or-later
@@ -20,6 +20,7 @@ environment:
       - libgcrypt-dev
       - linux-headers
       - lzo-dev
+      - openssf-compiler-options
       - pkgconf-dev
       - py3-babel
       - py3-docutils
