buildkitd.yaml: Add openssf-options

--- a/buildkitd.yaml
+++ b/buildkitd.yaml
@@ -2,7 +2,7 @@ package:
   name: buildkitd
   version: 0.16.0
   description: "concurrent, cache-efficient, and Dockerfile-agnostic builder toolkit"
-  epoch: 1
+  epoch: 2
   copyright:
     - license: Apache-2.0
   dependencies:
@@ -20,6 +20,7 @@ environment:
       - go
       - libseccomp-dev
       - libseccomp-static
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
