chore(datadog-agent-nvml): rename variables
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent-nvml.yaml
+++ b/datadog-agent-nvml.yaml
@@ -19,9 +19,9 @@ environment:
       - rsync
 
 vars:
-  DD_HOME: / # agent being run by root expects /.
-  DD_SHARED: /usr/share/datadog-agent
-  DD_CONF: /etc/datadog-agent/conf.d
+  dd_conf: /etc/datadog-agent/conf.d
+  dd_home: / # agent being run by root expects /.
+  dd_shared: /usr/share/datadog-agent
   python_version: "3.11"
 
 pipeline:
@@ -37,37 +37,37 @@ pipeline:
       . .venv/bin/activate
 
       # Use embedded Python in virtual environment.
-      sed -i "s|$(pwd)/.venv|${{vars.DD_SHARED}}|g" .venv/pyvenv.cfg
-      sed -i "s|$(pwd)/.venv|${{vars.DD_SHARED}}|g" .venv/bin/*
+      sed -i "s|$(pwd)/.venv|${{vars.dd_shared}}|g" .venv/pyvenv.cfg
+      sed -i "s|$(pwd)/.venv|${{vars.dd_shared}}|g" .venv/bin/*
 
       # Dump the packages.
       mkdir site-packages
-      rsync -az ${{vars.DD_SHARED}}/lib/python${{vars.python_version}}/site-packages/ ./site-packages/
+      rsync -az ${{vars.dd_shared}}/lib/python${{vars.python_version}}/site-packages/ ./site-packages/
 
       # This is needed to work around the error "ValueError: ZIP does not support timestamps before 1980"
       SOURCE_DATE_EPOCH=315532800
-      # Install integration as documented:
-      # https://docs.datadoghq.com/agent/guide/use-community-integrations/?tab=containerized
+
+      # Install integration.
       pip install ./nvml
 
       # Cleanup before preparing the package content.
-      find ${{vars.DD_SHARED}} -name "*.pyc" -delete
-      find ${{vars.DD_SHARED}} -name "__pycache__" -exec rm -rf {} +
+      find ${{vars.dd_shared}} -name "*.pyc" -delete
+      find ${{vars.dd_shared}} -name "__pycache__" -exec rm -rf {} +
 
       # Prepare the package content.
-      diff_packages=$(rsync --include='*/' --exclude='*' --ignore-existing -rv --dry-run ${{vars.DD_SHARED}}/lib/python${{vars.python_version}}/site-packages/ ./site-packages/ | grep -v "sending incremental file list" | grep -v -E "^\./$|^sent .+ bytes|total size|^$")
+      diff_packages=$(rsync --include='*/' --exclude='*' --ignore-existing -rv --dry-run ${{vars.dd_shared}}/lib/python${{vars.python_version}}/site-packages/ ./site-packages/ | grep -v "sending incremental file list" | grep -v -E "^\./$|^sent .+ bytes|total size|^$")
 
       # Include the new packages.
-      packages_dir="${{targets.contextdir}}${{vars.DD_SHARED}}/lib/python${{vars.python_version}}/site-packages/"
+      packages_dir="${{targets.contextdir}}${{vars.dd_shared}}/lib/python${{vars.python_version}}/site-packages/"
       mkdir -p "${packages_dir}/datadog_checks"
       for package in $diff_packages; do
-        rsync -avz "${{vars.DD_SHARED}}/lib/python${{vars.python_version}}/site-packages/${package}" "${packages_dir}/${package}";
+        rsync -avz "${{vars.dd_shared}}/lib/python${{vars.python_version}}/site-packages/${package}" "${packages_dir}/${package}";
       done
 
       # Include the new configurations.
-      conf_dir="${{targets.destdir}}${{vars.DD_CONF}}/nvml.d"
+      conf_dir="${{targets.destdir}}${{vars.dd_conf}}/nvml.d"
       mkdir -p $conf_dir
-      rsync -avz ${{vars.DD_SHARED}}/lib/python${{vars.python_version}}/site-packages/datadog_checks/nvml/data/ $conf_dir/
+      rsync -avz ${{vars.dd_shared}}/lib/python${{vars.python_version}}/site-packages/datadog_checks/nvml/data/ $conf_dir/
 
       deactivate
 
@@ -88,9 +88,9 @@ test:
         ls /usr/share/datadog-agent/lib/python${{vars.python_version}}/site-packages/datadog_nvml-${{package.version}}.dist-info/WHEEL
     - name: Verify the integration is installed # https://docs.datadoghq.com/agent/guide/integration-management/?tab=linux#install
       runs: |
-        cp /opt/datadog-agent/requirements-agent-release.txt ${{vars.DD_HOME}}/
-        cp /opt/datadog-agent/final_constraints-py3.txt ${{vars.DD_HOME}}/
-        mkdir -p /embedded/bin && ln -s $(which python3) ${{vars.DD_HOME}}/embedded/bin/python3
+        cp /opt/datadog-agent/requirements-agent-release.txt ${{vars.dd_home}}/
+        cp /opt/datadog-agent/final_constraints-py3.txt ${{vars.dd_home}}/
+        mkdir -p /embedded/bin && ln -s $(which python3) ${{vars.dd_home}}/embedded/bin/python3
         VERSION="$(agent integration show datadog-nvml | cut -d ':' -f2 | tr -d ' ')"
         test $VERSION = ${{package.version}}
 
