update aws modules versions and expected-commit

--- a/ruby3.2-aws-eventstream.yaml
+++ b/ruby3.2-aws-eventstream.yaml
@@ -20,9 +20,10 @@ environment:
 pipeline:
   - uses: git-checkout
     with:
-      expected-commit: bac3491f811717dcf592b01bd771f2db63afdb35
+      expected-commit: 86cccb96ed7a0ee71cd33847151b4219d30b1571
       repository: https://github.com/aws/aws-sdk-ruby
       branch: version-3
+      depth: -1
 
   - uses: ruby/build
     with:
