--- a/ruby3.2-aws-partitions.yaml
+++ b/ruby3.2-aws-partitions.yaml
@@ -1,7 +1,7 @@
 #nolint:valid-pipeline-git-checkout-tag
 package:
   name: ruby3.2-aws-partitions
-  version: 1.995.0
+  version: 1.996.0
   epoch: 0
   description: Provides interfaces to enumerate AWS partitions, regions, and services.
   copyright:
@@ -20,9 +20,10 @@ environment:
 pipeline:
   - uses: git-checkout
     with:
-      expected-commit: bac3491f811717dcf592b01bd771f2db63afdb35
+      expected-commit: 86cccb96ed7a0ee71cd33847151b4219d30b1571
       repository: https://github.com/aws/aws-sdk-ruby
       branch: version-3
+      depth: -1
 
   - uses: ruby/build
     with:
