aws-cli-v2.yaml: Add openssf-options (#31948)
Signed-off-by: Justin Vreeland <justinvreeland@users.noreply.github.com>

--- a/aws-cli-v2.yaml
+++ b/aws-cli-v2.yaml
@@ -3,7 +3,7 @@
 package:
   name: aws-cli-v2
   version: 2.18.15
-  epoch: 0
+  epoch: 1
   description: "Universal Command Line Interface for Amazon Web Services (v2)"
   copyright:
     - license: Apache-2.0
@@ -21,6 +21,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - openssf-compiler-options
       - posix-libc-utils # need ldd
       - python-3.11
       - python-3.11-dev
